--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -86,10 +86,14 @@
   code {
     font-size: 0.875rem /* 14px */;
     line-height: 1.25rem /* 20px */;
-    padding: 0.25rem 0.5rem /* 4px 8px */;
+
     border-radius: 0.25rem /* 4px */;
     background-color: rgb(55 65 81 / var(--tw-bg-opacity));
     color: white;
+  }
+
+  p > code {
+    padding: 0.25rem 0.5rem /* 4px 8px */;
   }
 }
 
